@@ -4,6 +4,10 @@ Important changes in 2.16 (2024-06-XX):
 
 * Bugfix: Closes#1072412: Fix build with FFmpeg 7.0. write_packet() now with
   const buffer as of Libavformat 61+.
+* Fixed deprecation: 2023-05-15 - 7d1d61cc5f5 - lavc 60 - avcodec.h
+  Depreate AVCodecContext.ticks_per_frame in favor of
+  AVCodecContext.framerate (encoding) and
+  AV_CODEC_PROP_FIELDS (decoding).
 
 Important changes in 2.15 (2024-02-03):
 
